WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93711
[BlackBerry] Tap highlight sometimes doesn't disappear
https://bugs.webkit.org/show_bug.cgi?id=93711
Summary
[BlackBerry] Tap highlight sometimes doesn't disappear
Arvid Nilsson
Reported
2012-08-10 04:59:46 PDT
PR 188453
Attachments
Patch
(9.01 KB, patch)
2012-08-10 05:09 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-08-10 05:08:22 PDT
This was reviewed internally by Sean Wang, who had been investigated this area of the code regarding an assert failure that this patch happens to fix.
Arvid Nilsson
Comment 2
2012-08-10 05:09:33 PDT
Created
attachment 157710
[details]
Patch
WebKit Review Bot
Comment 3
2012-08-12 15:59:43 PDT
Comment on
attachment 157710
[details]
Patch Clearing flags on attachment: 157710 Committed
r125381
: <
http://trac.webkit.org/changeset/125381
>
WebKit Review Bot
Comment 4
2012-08-12 15:59:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug