Source/WebKit/blackberry/Api/WebOverlay.cpp
@@ -215,10 +215,13 @@ WebPagePrivate* WebOverlayPrivate::page() const
 
 WebOverlayOverride* WebOverlayPrivate::override()
 {
+    if (!m_override)
+        m_override = adoptPtr(new WebOverlayOverride(this));
+
     // Page might have changed if we were removed from the page and added to
     // some other page.
-    if (m_override)
-        m_override->d->setPage(page());
+    m_override->d->setPage(page());
+
     return m_override.get();
 }
 
@@ -242,16 +245,6 @@ WebOverlayPrivateWebKitThread::WebOverlayPrivateWebKitThread(GraphicsLayerClient
     : m_layer(GraphicsLayer::create(client ? client : this))
 {
     m_layerCompositingThread = m_layer->platformLayer()->layerCompositingThread();
-}
-
-WebOverlayOverride* WebOverlayPrivateWebKitThread::override()
-{
-    if (!m_override) {
-        WebOverlayPrivate* tmp = new WebOverlayPrivateCompositingThread(m_layerCompositingThread.get());
-        m_override = adoptPtr(new WebOverlayOverride(tmp, true));
-    }
-
-    return WebOverlayPrivate::override();
 }
 
 FloatPoint WebOverlayPrivateWebKitThread::position() const
@@ -497,14 +490,6 @@ void WebOverlayPrivateCompositingThread::setClient(WebOverlayClient* client)
     WebOverlayPrivate::setClient(client);
     if (m_layerCompositingThreadClient)
         m_layerCompositingThreadClient->setClient(q, client);
-}
-
-WebOverlayOverride* WebOverlayPrivateCompositingThread::override()
-{
-    if (!m_override)
-        m_override = adoptPtr(new WebOverlayOverride(this, false));
-
-    return WebOverlayPrivate::override();
 }
 
 FloatPoint WebOverlayPrivateCompositingThread::position() const
